<resources>
    <string name="app_name">BusinessCalculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ZeroZero">00</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="res">=</string>
    <string name="minus">−</string>
    <string name="multi">×</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M−</string>
    <string name="MR">MR</string>
    <string name="MC">MC</string>
    <string name="sqr">xʸ</string>
    <string name="clear">c</string>
    <string name="_0">0</string>
    <string name="brackets">()</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tn</string>
    <string name="plmn">+/-</string>


</resources>
